Pawn moves completed

--- a/frontend/src/components/cell/cell.module.css
+++ b/frontend/src/components/cell/cell.module.css
@@ -2,6 +2,7 @@
     background: black;
     width:4rem;
     height: 4rem;
+    position: relative;
 }
 
 .light_cell {
@@ -15,4 +16,17 @@
 .logo {
     width: 4rem;
     height: 4rem;
+    position: relative;
+    z-index: 1;
+}
+
+.move {
+    background: gray;
+    border-radius: 50%;
+    position: absolute;
+    top: 25px;
+    left: 25px;
+    height: 15px;
+    width: 15px;
+    z-index: 2;
 }
